Diabled Parallax on Mobile Fixed key warnings

--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,6 @@ textarea.form-control {
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     width: 100%;
 }
 
@@ -583,3 +582,9 @@ thead {
 iframe {
     margin: 10px;
 }
+
+@media (min-width: 992px) {
+    .gb-parallax {
+        background-attachment: fixed;
+    }
+ }
